Modernize the reflection, fileslice and utils packages for Java 17
Pattern matching for instanceof, arrow switch, lambdas in place of
anonymous single-method classes, Path.of, StringBuilder.isEmpty,
computeIfAbsent/putIfAbsent, and a diamond on an anonymous class.

Also corrects an inline comment in ClassfileReader.readTo that named
randomAccessReader as the null field when it is inflaterInputStream,
and a stale comment in ScanSpec about rt.jar.